k8s/cloud/auth.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-auth
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth-server
  namespace: traefik-auth
  labels:
    app: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: traefik-auth
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4181
  selector:
    app: auth-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-route
  namespace: traefik-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd, kube-system-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: auth.analogrelay.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-server
            port:
              number: 80
  tls:
    - hosts:
        - auth.analogrelay.cloud
      secretName: traefik-auth-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: kube-system
spec:
  forwardAuth:
    address: http://auth-server.traefik-auth.svc.cluster.local
    authResponseHeaders: 
      - X-Forwarded-User
